<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorSpace2"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/time_taken"
            android:typeface="sans"
            android:fontFamily="sans-serif"
            android:textSize="34sp"
            android:textColor="@color/colorWhite"
            android:id="@+id/textView"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/lvChoices"
            android:layout_marginBottom="8dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:typeface="sans"
            android:fontFamily="sans-serif"
            android:textSize="34sp"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:id="@+id/tvTimeTaken"
            android:layout_marginStart="48dp"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/textView"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/tvhrs"/>

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/hours"
            android:typeface="sans"
            android:fontFamily="sans-serif"
            android:textSize="34sp"
            android:textColor="@color/colorWhite"
            android:id="@+id/tvhrs"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/textView"
            app:layout_constraintStart_toEndOf="@+id/tvTimeTaken"
            android:layout_marginStart="8dp"/>

    <ListView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            tools:listitem="@layout/planet_item"
            android:id="@+id/lvChoices"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/lvChoices"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp">

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnFindFalcone"
                android:visibility="gone"
                tools:visibility="visible"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/colorSpace2"
                android:background="@color/skyBlue"
                android:shadowColor="@color/grey"
                android:layout_gravity="center"
                android:text="@string/find_falcone"/>
    </FrameLayout>

</android.support.constraint.ConstraintLayout>